objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Email__c</fullName>
        <formula>IF(NOT(ISBLANK(Barclays_Attendee__c)), 
  Barclays_Attendee__r.Email,  
  IF(NOT(ISBLANK(Client_Attendee__c)), 
    Client_Attendee__r.Email, 
    &apos;&apos;
  )
)</formula>
        <label>Attendee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <formula>IF(ISBLANK( Barclays_Attendee__c )= FALSE ,
 Barclays_Attendee__r.FirstName&amp;&quot; &quot;&amp;Barclays_Attendee__r.LastName,IF(ISBLANK( Client_Attendee__c )= FALSE ,
 Client_Attendee__r.FirstName&amp;&quot; &quot;&amp;Client_Attendee__r.LastName,IF(ISBLANK( Wealth_Attendee__c )= FALSE ,
   HYPERLINK(&quot;/&quot;&amp;Wealth_Attendee__r.Id , Wealth_Attendee__r.Name  , &quot;_self&quot;)   ,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type__c</fullName>
        <formula>IF(ISBLANK( Barclays_Attendee__c )= FALSE ,
 HYPERLINK(&quot;/&quot;&amp;Id , &quot;Barclays Attendee&quot;,&quot;_Self&quot;),
IF(ISBLANK( Client_Attendee__c )= FALSE ,
HYPERLINK(&quot;/&quot;&amp;Id , &quot;Client Attendee&quot;,&quot;_Self&quot;),
IF(ISBLANK( Wealth_Attendee__c )= FALSE ,
 HYPERLINK(&quot;/&quot;&amp;Id , &quot;Role Attendee&quot;,&quot;_Self&quot;),&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barclays_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Barclays Attendee (User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Report__c</fullName>
        <label>Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Attendee (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Reports</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>I_confirm_team_member_has_been_cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I confirm team member has been cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Call_Report__c</fullName>
        <description>Set the user ID to 1 if the Absa Attendee is the same as the user logged in (Running User)</description>
        <formula>IF( OR( Barclays_Attendee__r.Id =  $User.Id ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Call Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Senior_Sponsor__c</fullName>
        <formula>OR(Barclays_Attendee__r.Senior_Sponsor__c,Call_Report__r.Owner:User.Senior_Sponsor__c)</formula>
        <label>Senior Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UK_Barclays_CRAttendee_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UK Barclays CRAttendee ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wealth_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role Attendee</label>
        <referenceTo>Roles__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attendee</label>
    <nameField>
        <displayFormat>AT{000000}</displayFormat>
        <label>Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <recordTypes>
        <fullName>Barclays_Attendee</fullName>
        <active>true</active>
        <label>Barclays Attendee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Attendee</fullName>
        <active>true</active>
        <label>Client Attendee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shared_with</fullName>
        <active>true</active>
        <description>Additional RT for sharing purposes when user is not Barclays user nor Client</description>
        <label>Shared with</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wealth_Attendee</fullName>
        <active>true</active>
        <label>Wealth Attendee</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Values_In_Barc_Employee_and_Non_Employee</fullName>
        <active>true</active>
        <description>Prevents users from entering a value in the Barclays Employee and Non-Employee</description>
        <errorConditionFormula>(ISBLANK( Barclays_Attendee__c ) = FALSE )&amp;&amp;
(ISBLANK(  Client_Attendee__c  )= FALSE)</errorConditionFormula>
        <errorDisplayField>Barclays_Attendee__c</errorDisplayField>
        <errorMessage>A record can only contain either an employee or a non-employee , please create a new attendee record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>team_member_confirmation</fullName>
        <active>true</active>
        <description>This rule checks whether the  &quot;I confirm team member has been cleared&quot; field is checked.</description>
        <errorConditionFormula>AND (
 RecordType.Name = &apos;Shared with&apos;,
 I_confirm_team_member_has_been_cleared__c = FALSE
)</errorConditionFormula>
        <errorDisplayField>I_confirm_team_member_has_been_cleared__c</errorDisplayField>
        <errorMessage>Please make sure that you have checked the &quot;I confirm team member has been cleared&quot; field.</errorMessage>
    </validationRules>
</CustomObject>